pkg/cmd/kurel/testdata/httproute-filters-requestmirror/expected.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
    launcher.gokure.dev/component: api
  name: api
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      labels:
        app: api
        launcher.gokure.dev/component: api
    spec:
      containers:
      - image: myregistry/api:v1.0.0
        name: api
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
      serviceAccountName: api
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
    launcher.gokure.dev/component: api
  name: api
  namespace: production
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api
  type: ClusterIP
---
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  labels:
    app: api
    launcher.gokure.dev/component: api
  name: api
  namespace: production
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: api
    launcher.gokure.dev/component: api
  name: api-httproute
  namespace: production
spec:
  hostnames:
  - api.example.com
  parentRefs:
  - name: public-gateway
    namespace: gateway-system
  rules:
  - backendRefs:
    - name: api
      port: 8080
    filters:
    - requestMirror:
        backendRef:
          name: mirror-svc
          port: 8080
        percent: 50
      type: RequestMirror
    matches:
    - path:
        type: PathPrefix
        value: /
